<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Classify"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_below="@id/selected_image"
        app:srcCompat="@android:color/background_light"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/classify_image"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/selected_image"
        android:layout_centerHorizontal="true"
        android:text="@string/classify" />


    <LinearLayout
        android:id="@+id/labels"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/classify_image"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lableText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ConfidenceText"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/confidence"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label1"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Confidence1"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label2"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Confidence2"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label3"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Confidence3"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/labels"
        android:layout_marginTop="-160dp"
        android:layout_centerHorizontal="true"
        android:text="@string/back" />

</RelativeLayout>